--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Install dependencies
         run: |
           source tom_env/bin/activate
+          pip install tomtoolkit
           pip install -r requirements.txt
 
       # 5. Run tests
