--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -9,7 +9,8 @@ on:
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
-
+    env:
+      LASAIR_API_KEY: ${{ secrets.LASAIR_API_KEY }}
     steps:
       # 1. Checkout repo
       - name: Checkout repository
