--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - hack-dev
       - main
-  pull_request_target:
+  pull_request:
     branches:
       - hack-dev
       - main
