--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 django-debug-toolbar
 django-bootstrap5
 django-htmx
-pandas
-matplotlib
-tomtoolkit
-lasair
+pandas>=2.3
+matplotlib>=3.9
+tomtoolkit>=2.26
+lasair>=0.1.1
